refactored tour controller and tour service